Fix div overflow with long favourites list.

--- a/popup.css
+++ b/popup.css
@@ -26,13 +26,14 @@
     text-align: right;
 }
 
-body {
-    min-width: 32em;
-}
-
 .container {
+    min-width: 32em;
     max-height: 30em;
     max-width: 48em;
+}
+
+.container.scrolling {
+    overflow-y: scroll;
 }
 
 #content {
